# hackathon-essec

./: README.md
analysewebsite/: README.md  pyproject.toml
analysewebsite/output/: report.md
analysewebsite/src/analysewebsite/: crew.py  main.py
analysewebsite/src/analysewebsite/config/: agents.yaml  tasks.yaml
safeqr/: package-lock.json  package.json
safeqr/output/: report.md
safeqr/src/app/: layout.tsx  page.tsx
safeqr/src/app/api/analyze/: route.ts
safeqr/src/components/: QrScanner.tsx  UrlAnalysis.tsx
