[project]
name = "analysewebsite"
version = "0.1.0"
description = "analysewebsite using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
analysewebsite = "analysewebsite.main:run"
run_crew = "analysewebsite.main:run"
train = "analysewebsite.main:train"
replay = "analysewebsite.main:replay"
test = "analysewebsite.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
